--- a/schedules/2025-06-16.md
+++ b/schedules/2025-06-16.md
@@ -25,7 +25,7 @@
 | 2000 - 2100 | Check Petty Cash Log, Make ArtFusion iBay Post |
 | 2100 - 2200 | Review and tomorrow's preparation - TEST Entry |
 | 2200 - 2300 | Review and tomorrow's preparation - TEST Entry |
-| 2300 - 2400 | Review and tomorrow's preparation - TEST Entry |
+| 2300 - 2400 | Review and tomorrow's preparation - TEST Entry edit 1|
 
 
 ## Notes
